--- a/PruebaReact/src/main/resources/application.yml
+++ b/PruebaReact/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
     port: 8080
 spring:
     profiles:
-        active: @spring.profiles.active@
+        active: '@spring.profiles.active@'
     security:
         oauth2:
             client:
