--- a/PruebaMixto/pom.xml
+++ b/PruebaMixto/pom.xml
@@ -18,6 +18,7 @@
         <frontend-maven-plugin.version>1.10.0</frontend-maven-plugin.version>
         <node.version>v12.18.2</node.version>
         <npm.version>6.14.5</npm.version>
+        <rest-assured.version>4.2.0</rest-assured.version>
         <java.version>1.8</java.version>
     </properties>
 
@@ -60,6 +61,29 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>xml-path</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
         </dependency>
     </dependencies>
 
